--- a/css/style.css
+++ b/css/style.css
@@ -1,130 +1,228 @@
-body {
-  font-family: "Roboto", sans-serif;
-  line-height: 1.5;
-  letter-spacing: 0.02em;
-  color: #434455;
-  background-color: #FFFFFF
-}
 
+body {
+font-family: "Roboto", sans-serif;
+line-height: 1.5;
+letter-spacing: 0.02em;
+color: #434455;
+background-color: #FFFFFF
+}
+p, h1, h2, h3, h4, h5, h6 {
+margin: 0;
+padding: 0;
+}
 ul {
-  list-style-type: none;
-  background-color: #FFFFFF
+list-style-type: none;
+background-color: #FFFFFF;
+margin: 0;
+padding: 0;
 }
 a {
-  text-decoration: none;
+text-decoration: none;
 }
 
-.header {
-}
-.header-nav {
-}
+
 
 .header-logo {
-  font-family: "Raleway", sans-serif;
-  font-weight: 700;
+font-family: "Raleway", sans-serif;
+font-weight: 700;
 font-size: 18px;
 line-height: 1.17;
 letter-spacing: 0.03em;
 text-transform: uppercase;
 color: #4d5ae5;
+padding-top: 24px;
+padding-bottom: 24px;
+
+
 }
 
 .header-logo-italik{
-  font-family: "Raleway", sans-serif;
-  font-weight: 700;
+font-family: "Raleway", sans-serif;
+font-weight: 700;
 font-size: 18px;
 line-height: 1.17;
 letter-spacing: 0.03em;
 text-transform: uppercase;
 color: #2e2f42;
+margin-right: 76px;
+padding-top: 24px;
+padding-bottom: 24px;
 }
-
 .header-menu-links:hover,
 .header-menu-links:focus {
-  color: #404BBF;
+color: #404BBF;
 }
-
 .header-menu {
 }
 .header-menu-item {
 }
- 
 .header-menu-links {
+display: flex;
 font-weight: 500;
 font-size: 16px;
 line-height: 1.5;
 letter-spacing: 0.02em;
 color: #2e2f42;
+padding-top: 24px;
+padding-bottom: 24px;
 }
-
 .header-address {
-  font-style: normal;
+font-style: normal;
 }
-.address-list {
+.header-address {
+margin-left: auto;
 }
-.address-post {
+.header-menu-list {
+display: flex;
+gap: 40px;
 }
-
+.header-address-navigation {
+display: flex;
+gap: 40px;
+padding-top: 24px;
+padding-bottom: 24px;
+padding-left: 156px;
+padding-right: 76px;
+}
+.header-navigation {
+display: flex;
+}
+.container {
+display: flex;
+align-items: center;
+justify-content: space-between;
+max-width: 1088px;
+padding-left: 15px;
+padding-right: 15px;
+margin: 0 auto;
+margin-left: 151px;
+margin-right: 151px;
+}
+.header .container {
+display: flex;
+align-items: center;
+justify-content: space-between;
+max-width: 1088px;
+margin-left: 15px;
+margin-right: 15px;
+margin: 0 auto;
+}
 .header-address-links:hover,
 .header-address-links:focus {
-  color: #404BBF;
+color: #404BBF;
 }
 
+.header-address-links {
+}
 .header-address-links {
 font-weight: 400;
 font-size: 16px;
 line-height: 1.5;
 letter-spacing: 0.02em;
 color: #434455;
+padding-top: 24px;
+padding-bottom: 24px;
 }
-
 .main {
 }
 .main-section {
-  background: #2e2f42;
+background: #2e2f42;
 }
+.container.main-container {
+display: flex;
+flex-direction: column;
+align-items: center;
+justify-content: center;
+max-width: 1088px;
+padding-left: 15px;
+padding-right: 15px;
+margin: 0 auto;
+}
+
 .title-effective-solutions {
-  font-weight: 700;
 font-size: 56px;
 line-height: 1.07;
 letter-spacing: 0.02em;
 text-align: center;
 color: #fff;
-text-transform: capitalize; 
+text-transform: capitalize;
+padding-top: 188px;
+padding-bottom: 48px;
+max-width: 496px;
+margin: 0% auto;
+
 }
 
 .order-service {
-  font-weight: 500;
+display: inline-flex;
+align-items: center;
+justify-content: center;
+flex-direction: row;
+gap: 10px;
+border-radius: 4px;
+padding: 16px 32px;
+font-weight: 500;
 font-size: 16px;
 line-height: 1.5;
 letter-spacing: 0.04em;
 color: #fff;
 cursor: pointer;
-background-color: #4D5AE5
-  
+margin-bottom: 188px;
+box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
+background: #4d5ae5;
+
 }
 .order-service:hover,
 .order-service:focus {
-  background-color: #404BBF;
+background-color: #404BBF;
 }
-
+.container.advant {
+}
 .advantages {
 }
 .advantages-title {
-  text-transform: capitalize; 
+position: absolute;
+width: 1px;
+height: 1px;
+margin: -1px;
+border: 0;
+padding: 0;
+white-space: nowrap;
+clip-path: inset(100%);
+clip: rect(0 0 0 0);
+overflow: hidden;
 }
 .advantages-list {
+display: flex;
+padding-top: 120px;
+padding-bottom: 120px;
+margin-right: auto;
+margin-left: auto;
+margin: 0% auto;
+gap: 2.27%;
 }
 .advantages-item {
+flex: 0 0 calc((100% - 3 * 24px) / 4);
+flex: 0 0 23.3%;
+width: 264px;
+max-height: 104px;
+
 }
 .advantages-item-title {
-  font-weight: 500;
+font-weight: 500;
 font-size: 20px;
 line-height: 1.2;
 letter-spacing: 0.02em;
 color: #2e2f42;
+padding-bottom: 8px;
 }
-.advantages-item-text,
+.advantages-item-text{
+font-weight: 400;
+font-size: 16px;
+line-height: 1.5;
+letter-spacing: 0.02em;
+color: #434455;
+}
 .portfolio-item-text {
 font-size: 16px;
 line-height: 1.5;
@@ -133,29 +231,36 @@ color: #434455;
 }
 
 .our-team {
-  background: #f4f4fd;
+background: #f4f4fd;
+padding-top: 120px;
+padding-bottom: 72px;
 }
 
-
 .our-team-title {
-  font-weight: 700;
+font-weight: 700;
 font-size: 36px;
 line-height: 1.11;
 letter-spacing: 0.02em;
 text-align: center;
 color: #2e2f42;
 text-transform: capitalize;
+padding-bottom: 72px;
+}
+.container.our-team-container {
+padding-top: 120px;
+padding-bottom: 120px;
+display: flex;
 }
 .our-team-list {
-  background-color: #FFFFFF
+background-color: #FFFFFF;
 }
 .our-team-item {
-  background-color: #FFFFFF
+background-color: #FFFFFF
 }
 .our-team-img {
 }
 .our-team-item-title {
-  font-weight: 500;
+font-weight: 500;
 font-size: 20px;
 line-height: 1.2;
 letter-spacing: 0.02em;
@@ -172,14 +277,19 @@ color: #434455;
 }
 .portfolio {
 }
+.container.portfolio-container {
+padding-bottom: 120px;
+padding-top: 120px;
+}
 .portfolio-title {
-  font-weight: 700;
+font-weight: 700;
 font-size: 36px;
 line-height: 1.11;
 letter-spacing: 0.02em;
 text-align: center;
 color: #2e2f42;
-text-transform: capitalize 
+text-transform: capitalize;
+padding-bottom: 72px;
 }
 .portfolio-list {
 }
@@ -188,20 +298,23 @@ text-transform: capitalize
 .portfolio-img {
 }
 .portfolio-item-title {
-  font-weight: 500;
+font-weight: 500;
 font-size: 20px;
 line-height: 1.2;
 letter-spacing: 0.02em;
 color: #2e2f42;
-text-transform: capitalize 
+text-transform: capitalize
 }
-
+.container.footer-container {
+padding-bottom: 120px;
+padding-top: 120px;
+}
 .page-footer {
-  background: #2e2f42;
+background: #2e2f42;
 }
 .footer-logo {
-  font-family: "Raleway", sans-serif;
-  font-weight: 700;
+font-family: "Raleway", sans-serif;
+font-weight: 700;
 font-size: 18px;
 line-height: 1.17;
 letter-spacing: 0.03em;
@@ -209,12 +322,15 @@ text-transform: uppercase;
 color: #4d5ae5;
 }
 .footer-logo .webstudio {
- color: #f4f4fd;
+color: #f4f4fd;
 }
 .footer-text {
-  font-weight: 400;
+font-weight: 400;
 font-size: 16px;
 line-height: 1.5;
 letter-spacing: 0.02em;
 color: #f4f4fd;
 }
+
+
+
