--- a/css/style.css
+++ b/css/style.css
@@ -1,334 +1,290 @@
-
 body {
-font-family: "Roboto", sans-serif;
-line-height: 1.5;
-letter-spacing: 0.02em;
-color: #434455;
-background-color: #FFFFFF
+  font-family: "Roboto", sans-serif;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  color: #434455;
+  background-color: #ffffff;
 }
-p, h1, h2, h3, h4, h5, h6 {
-margin: 0;
-padding: 0;
+p,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  margin: 0;
+  padding: 0;
 }
 ul {
-list-style-type: none;
-background-color: #FFFFFF;
-margin: 0;
-padding: 0;
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
 }
 a {
-text-decoration: none;
+  text-decoration: none;
 }
-
-
 
 .header-logo {
-font-family: "Raleway", sans-serif;
-font-weight: 700;
-font-size: 18px;
-line-height: 1.17;
-letter-spacing: 0.03em;
-text-transform: uppercase;
-color: #4d5ae5;
-padding-top: 24px;
-padding-bottom: 24px;
-display: ;
-align-items: center;
-
-
+  font-family: "Raleway", sans-serif;
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 1.17;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+  color: #4d5ae5;
+  padding-top: 24px;
+  padding-bottom: 24px;
+  margin-right: 76px;
 }
 
-.header-logo-italik{
-font-family: "Raleway", sans-serif;
-font-weight: 700;
-font-size: 18px;
-line-height: 1.17;
-letter-spacing: 0.03em;
-text-transform: uppercase;
-color: #2e2f42;
-margin-right: 76px;
-padding-top: 24px;
-padding-bottom: 24px;
+.header-logo-italik {
+  font-family: "Raleway", sans-serif;
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 1.17;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+  color: #2e2f42;
+  padding-top: 24px;
+  padding-bottom: 24px;
 }
 .header-menu-links:hover,
 .header-menu-links:focus {
-color: #404BBF;
+  color: #404bbf;
 }
 .header-menu {
 }
 .header-menu-item {
 }
 .header-menu-links {
-display: flex;
-font-weight: 500;
-font-size: 16px;
-line-height: 1.5;
-letter-spacing: 0.02em;
-color: #2e2f42;
-padding-top: 24px;
-padding-bottom: 24px;
+  display: flex;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  color: #2e2f42;
+  padding-top: 24px;
+  padding-bottom: 24px;
 }
 .header-address {
-font-style: normal;
+  font-style: normal;
 }
 .header-address {
-margin-left: auto;
+  margin-left: auto;
 }
 .header-menu-list {
-display: flex;
-gap: 40px;
+  display: flex;
+  gap: 40px;
 }
 .header-address-navigation {
-display: flex;
-gap: 40px;
-padding-top: 24px;
-padding-bottom: 24px;
-padding-left: 156px;
-padding-right: 76px;
+  display: flex;
+  gap: 40px;
+  padding-top: 24px;
+  padding-bottom: 24px;
 }
 .header-navigation {
-display: flex;
+  display: flex;
 }
 .container {
-display: flex;
-align-items: center;
-justify-content: space-between;
-max-width: 1088px;
-padding-left: 15px;
-padding-right: 15px;
-margin: 0 auto;
-margin-left: 151px;
-margin-right: 151px;
+  max-width: 1158px;
+  padding-left: 15px;
+  padding-right: 15px;
+  margin: 0 auto;
 }
 .header .container {
-display: flex;
-align-items: center;
-justify-content: space-between;
-max-width: 1088px;
-margin-left: 15px;
-margin-right: 15px;
-margin: 0 auto;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  max-width: 1088px;
+  margin-left: 15px;
+  margin-right: 15px;
+  margin: 0 auto;
 }
 .header-address-links:hover,
 .header-address-links:focus {
-color: #404BBF;
+  color: #404bbf;
 }
 
 .header-address-links {
 }
 .header-address-links {
-font-weight: 400;
-font-size: 16px;
-line-height: 1.5;
-letter-spacing: 0.02em;
-color: #434455;
-padding-top: 24px;
-padding-bottom: 24px;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  color: #434455;
+  padding-top: 24px;
+  padding-bottom: 24px;
 }
 .main {
 }
 .main-section {
-background: #2e2f42;
+  background: #2e2f42;
 }
 .container.main-container {
-display: flex;
-flex-direction: column;
-align-items: center;
-justify-content: center;
-max-width: 1088px;
-padding-left: 15px;
-padding-right: 15px;
-margin: 0 auto;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  max-width: 1088px;
+  padding-left: 15px;
+  padding-right: 15px;
+  margin: 0 auto;
 }
 
 .title-effective-solutions {
-font-size: 56px;
-line-height: 1.07;
-letter-spacing: 0.02em;
-text-align: center;
-color: #fff;
-text-transform: capitalize;
-padding-top: 188px;
-padding-bottom: 48px;
-max-width: 496px;
-margin: 0% auto;
-
+  font-size: 56px;
+  line-height: 1.07;
+  letter-spacing: 0.02em;
+  text-align: center;
+  color: #fff;
+  text-transform: capitalize;
+  padding-top: 188px;
+  padding-bottom: 48px;
+  max-width: 496px;
+  margin: 0% auto;
 }
 
 .order-service {
-display: inline-flex;
-align-items: center;
-justify-content: center;
-flex-direction: row;
-gap: 10px;
-border-radius: 4px;
-padding: 16px 32px;
-font-weight: 500;
-font-size: 16px;
-line-height: 1.5;
-letter-spacing: 0.04em;
-color: #fff;
-cursor: pointer;
-margin-bottom: 188px;
-box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
-background: #4d5ae5;
-
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: row;
+  gap: 10px;
+  border-radius: 4px;
+  padding: 16px 32px;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.04em;
+  color: #fff;
+  cursor: pointer;
+  margin-bottom: 188px;
+  box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
+  background: #4d5ae5;
 }
 .order-service:hover,
 .order-service:focus {
-background-color: #404BBF;
+  background-color: #404bbf;
 }
 .container.advant {
-  margin: 0 auto
+  margin: 0 auto;
 }
 .advantages {
 }
 .advantages-title {
-position: absolute;
-width: 1px;
-height: 1px;
-margin: -1px;
-border: 0;
-padding: 0;
-white-space: nowrap;
-clip-path: inset(100%);
-clip: rect(0 0 0 0);
-overflow: hidden;
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  border: 0;
+  padding: 0;
+  white-space: nowrap;
+  clip-path: inset(100%);
+  clip: rect(0 0 0 0);
+  overflow: hidden;
 }
 .advantages-list {
-display: flex;
-justify-content: space-between;
-padding-top: 120px;
-padding-bottom: 120px;
-margin: 0 auto;
-gap: 2.27%;
-
-
+  display: flex;
+  justify-content: space-between;
+  padding-top: 120px;
+  padding-bottom: 120px;
+  margin: 0 auto;
+  gap: 2.27%;
 }
 .advantages-item {
- 
-
-
-
 }
 .advantages-item-title {
-font-weight: 500;
-font-size: 20px;
-line-height: 1.2;
-letter-spacing: 0.02em;
-color: #2e2f42;
-padding-bottom: 8px;
-
-
-
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 1.2;
+  letter-spacing: 0.02em;
+  color: #2e2f42;
+  padding-bottom: 8px;
 }
-.advantages-item-text{
-font-weight: 400;
-font-size: 16px;
-line-height: 1.5;
-letter-spacing: 0.02em;
-color: #434455;
-
+.advantages-item-text {
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  color: #434455;
 }
 .portfolio-item-text {
-font-size: 16px;
-line-height: 1.5;
-letter-spacing: 0.02em;
-color: #434455;
-
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  color: #434455;
 }
 
 .our-team {
-background: #f4f4fd;
-padding-top: 120px;
-padding-bottom: 72px;
-
+  background-color: #f4f4fd;
+  padding-top: 120px;
+  padding-bottom: 120px;
 }
 
 .our-team-title {
-font-weight: 700;
-font-size: 36px;
-line-height: 1.11;
-letter-spacing: 0.02em;
-text-align: center;
-color: #2e2f42;
-text-transform: capitalize;
-padding-bottom: 72px;
-}
-.container.our-team-container {
-margin: 0 auto
-
-
-
-
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 1.11;
+  letter-spacing: 0.02em;
+  text-align: center;
+  color: #2e2f42;
+  text-transform: capitalize;
+  padding-bottom: 72px;
 }
 
 .our-team-list {
-display: flex;
-  margin: 0 auto; 
-
-
+  display: flex;
+  gap: 24px;
 }
 .our-team-item {
- 
-
-  
-  
-
+  width: calc((100%-72px) / 4);
 }
-.our-team-img {
-  padding-bottom: 32px;
-  
-  
-
+.our-team-info {
+  background-color: #ffffff;
+  padding: 32px 0;
 }
+
 .our-team-item-title {
-font-weight: 500;
-font-size: 20px;
-line-height: 1.2;
-letter-spacing: 0.02em;
-text-align: center;
-color: #2e2f42;
-text-transform: capitalize;
-  padding-bottom: 8px;
-  
-
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 1.2;
+  letter-spacing: 0.02em;
+  text-align: center;
+  color: #2e2f42;
+  text-transform: capitalize;
+  margin-bottom: 8px;
 }
 .our-team-item-text {
-font-size: 16px;
-line-height: 1.5;
-letter-spacing: 0.02em;
-text-align: center;
-color: #434455;
-  padding-bottom: 32px;
-  
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  text-align: center;
+  color: #434455;
 }
 .portfolio {
 }
 .container.portfolio-container {
   display: flex;
   flex-direction: column;
-padding-bottom: 120px;
-padding-top: 120px;
-margin: 0 auto
-
-
-
+  padding-bottom: 120px;
+  padding-top: 120px;
+  margin: 0 auto;
 }
 .portfolio-title {
-display: flex;
-font-weight: 700;
-font-size: 36px;
-line-height: 1.11;
-letter-spacing: 0.02em;
-text-align: center;
-color: #2e2f42;
-text-transform: capitalize;
-padding-bottom: 72px;
+  display: flex;
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 1.11;
+  letter-spacing: 0.02em;
+  text-align: center;
+  color: #2e2f42;
+  text-transform: capitalize;
+  padding-bottom: 72px;
 }
 .portfolio-list {
-   display: flex;           /* робимо флекс-контейнер */
-  flex-wrap: wrap;         /* дозволяємо карткам переноситися на наступний рядок */
+  display: flex; /* робимо флекс-контейнер */
+  flex-wrap: wrap; /* дозволяємо карткам переноситися на наступний рядок */
   justify-content: center; /* центрируем ряд карток */
   gap: 24px;
   padding: 0;
@@ -336,47 +292,43 @@ padding-bottom: 72px;
   list-style: none;
 }
 .portfolio-item {
-  
-    flex: 0 1 calc((1058px - 2 * 24px) / 3); /* задаємо ширину картки */
-
-  
+  flex: 0 1 calc((1058px - 2 * 24px) / 3); /* задаємо ширину картки */
 }
 .portfolio-img {
 }
 .portfolio-item-title {
-font-weight: 500;
-font-size: 20px;
-line-height: 1.2;
-letter-spacing: 0.02em;
-color: #2e2f42;
-text-transform: capitalize
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 1.2;
+  letter-spacing: 0.02em;
+  color: #2e2f42;
+  text-transform: capitalize;
 }
 .container.footer-container {
-padding-bottom: 120px;
-padding-top: 120px;
 }
 .page-footer {
-background: #2e2f42;
+  background: #2e2f42;
+  padding-top: 100px;
+  padding-bottom: 100px;
 }
 .footer-logo {
-font-family: "Raleway", sans-serif;
-font-weight: 700;
-font-size: 18px;
-line-height: 1.17;
-letter-spacing: 0.03em;
-text-transform: uppercase;
-color: #4d5ae5;
+  font-family: "Raleway", sans-serif;
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 1.17;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+  color: #4d5ae5;
 }
 .footer-logo .webstudio {
-color: #f4f4fd;
+  color: #f4f4fd;
 }
 .footer-text {
-font-weight: 400;
-font-size: 16px;
-line-height: 1.5;
-letter-spacing: 0.02em;
-color: #f4f4fd;
+  margin-top: 16px;
+  max-width: 264px;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  color: #f4f4fd;
 }
-
-
-
