--- a/css/style.css
+++ b/css/style.css
@@ -30,6 +30,10 @@ a {
   border-bottom: 1px solid #e7e9fc;
   width: 1158px;
 }
+.container {
+  width: 1158px;
+}
+
 .header-logo {
   font-family: "Raleway", sans-serif;
   font-weight: 700;
