--- a/css/style.css
+++ b/css/style.css
@@ -313,8 +313,9 @@ a {
   row-gap: 48px;
 }
 .portfolio-item {
-  flex: 0 1 calc((1058px - 2 * 24px) / 3); /* задаємо ширину картки */
+width: calc((100% - 48px) / 3);
 }
+
 .portfolio-img {
 }
 .portfolio-item-title {
