--- a/css/style.css
+++ b/css/style.css
@@ -57,8 +57,6 @@ a {
   letter-spacing: 0.03em;
   text-transform: uppercase;
   color: #2e2f42;
-  padding-top: 24px;
-  padding-bottom: 24px;
 }
 .header-menu-links:hover,
 .header-menu-links:focus {
@@ -91,8 +89,6 @@ a {
 .header-address-navigation {
   display: flex;
   gap: 40px;
-  padding-top: 24px;
-  padding-bottom: 24px;
 }
 .header-navigation {
   display: flex;
@@ -103,7 +99,7 @@ a {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  
+
   margin: 0 auto;
 }
 .header-address-links:hover,
@@ -147,10 +143,11 @@ a {
   text-align: center;
   color: #fff;
   text-transform: capitalize;
-  padding-top: 188px;
-  padding-bottom: 48px;
   max-width: 496px;
-  margin: 0% auto;
+  margin-top: 0;
+  margin-right: auto;
+  margin-bottom: 48px;
+  margin-left: auto;
 }
 
 .order-service {
@@ -167,7 +164,6 @@ a {
   letter-spacing: 0.04em;
   color: #fff;
   cursor: pointer;
-  margin-bottom: 188px;
   box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
   background: #4d5ae5;
   display: block;
@@ -281,13 +277,9 @@ a {
   padding-bottom: 120px;
 }
 .container.portfolio-container {
-  display: flex;
   flex-direction: column;
-  padding-bottom: 120px;
-  padding-top: 120px;
-  margin: 0 auto;
 }
-.container.portfolio-info {
+.portfolio-info {
   padding: 32px 16px;
   border: 1px solid #e7e9fc;
   border-top: none;
@@ -313,7 +305,7 @@ a {
   row-gap: 48px;
 }
 .portfolio-item {
-width: calc((100% - 48px) / 3);
+  width: calc((100% - 48px) / 3);
 }
 
 .portfolio-img {
